fixed misalignments

--- a/estilo.css
+++ b/estilo.css
@@ -1,73 +1,67 @@
-body {
-    
-    background-color: #212121;
-    margin: 0px;
-    
+body{
+	background-color: #212121;
+	margin: auto;
 } 
-h1 {
-    color: white;
-    text-align: right;
-    font-size: 40px;
-    width: 938.75px;
-    border: 0px;
-    margin: 0px;
-    height: 100px;
-    display: inline-block;
-    padding-top: 10px;
+h1{
+	color: white;
+	text-align: center;
+	font-size: 40px;
+	padding-top: 10px;
 }
-
+#h1Cont{
+	text-align: center;
+	width: relative;
+	padding-top: 10px;
+}
 #logoFlamengo{
-    text-align: left;
-    margin: 0px;
-    padding-left: 10px;
-    display: inline-block;
+	margin: 0px;
+	padding-left: 10px;
+	display: flex;
 }
-#header{
-    width: 100%;
-    height: 137px;
-    padding-top: 10px;
-    background: darkred;
-    display: flex;
+#logoCont{
+	top: 5px;
+	height: 100px;
+	float: left;
+	position: absolute;
 }
-
-#Logo{
-    margin: 0px
-    width: 200px;
-    height: 100px;
-    position: relative;
-    display: inline-block;
+#headCont{
+	height: 120px;
 }
-#navigation{
-    color: white;
-    font-size: 30px;
-    margin: 0px;
-    height: 30px;
-    width: 1920px;
-    display: inline-block;
-    text-align: center;
+header{
+	height: 130px;
+	background: darkred;
+	display: block;
+}
+nav{
+	padding-top: 10px;
+	color: white;
+	font-size: 30px;
+	margin: auto;
+	height: 30px;
+	text-align: center;
 }
 #Jogadas{
-    color: white;
-    font-size: 40px;
-    height: 50px;
+	color: white;
+	font-size: 40px;
+	height: 50px;
 }
 a:link {
-    color : white;
-    background-color: transparent;
-    text-decoration: none;
+	color : white;
+	background-color: transparent;
+	text-decoration: none;
 }
 a:visited {
-    color : white;
-    background-color: transparent;
-    text-decoration: none;
+	color : white;
+	background-color: transparent;
+	text-decoration: none;
 }
 a:hover {
-    color: darkred;
-    background-color: transparent;
-    text-decoration: none;
+	color: darkred;
+	background-color: transparent;
+	text-decoration: none;
 }
 a:active {
-    color: darkred;
-    background-color: transparent;
-    text-decoration: none;
+	color: darkred;
+	background-color: transparent;
+	text-decoration: none;
 }
